--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,6 +10,18 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.main-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card {
+  max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
